--- a/src/ESFA.DC.Data.ULN.Model/ULN.Context.tt
+++ b/src/ESFA.DC.Data.ULN.Model/ULN.Context.tt
@@ -59,6 +59,7 @@ using System.Linq;
     public <#=code.Escape(container)#>()
         : base("name=<#=container.Name#>")
     {
+		this.Database.CommandTimeout = 180;		
 <#
 if (!loader.IsLazyLoadingEnabled(container))
 {
